src/test/deca/context/invalid/renduInter/04-wrong-type-assign-int-float.deca
{
int x = 4;
float y = 4.0;
x = y;
}